<resources>
    <string name="app_name">Easy Deals</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="copy_rights">Copyrights© Reserved under PickPamphlet</string>
    <string name="termshead">LAST REVISION: [01-June-2017]\n\n\nPLEASE READ THIS TERMS OF SERVICE AGREEMENT CAREFULLY. BY USING THIS APPLICATION YOU AGREE TO BE BOUND BY ALL OF THE TERMS AND CONDITIONS OF THIS AGREEMENT.\n\nThis Terms of Service Agreement (the "Agreement") governs your use of this APPLICATIOn, [EASY DEALS] ("EASY DEALS") offer of services . This Agreement includes, and incorporates by this reference, the policies and guidelines referenced below. [EASY DEALS] reserves the right to change or revise the terms and conditions of this Agreement at any time by posting any changes or a revised Agreement on this APPLICATION. [EASY DEALS] will alert you that changes or revisions have been made by indicating on the top of this Agreement the date it was last revised. The changed or revised Agreement will be effective immediately after it is posted on this APPLICATION. Your use of the APPLICATION following the posting any such changes or of a revised Agreement will constitute your acceptance of any such changes or revisions. [EASY DEALS] encourages you to review this Agreement whenever you visit the APPLICATION to make sure that you understand the terms and conditions governing use of the APPLICATION. This Agreement does not alter in any way the terms or conditions of any other written agreement you may have with [EASY DEALS] for other Services or services. If you do not agree to this Agreement (including any referenced policies or guidelines), please immediately terminate your use of the APPLICATION. If you would like to print this Agreement, please click the print button on your browser toolbar.</string>
    <string name="terms1">Terms of Offer. This APPLICATION offers for sale certain Services (the "Services"). By placing an order for Services through this APPLICATION, you agree to the terms set forth in this Agreement. </string>
    <string name="terms2"><b><i>Customer Solicitation:</i></b> Unless you notify our third party call center reps or direct [EASY DEALS] sales reps, while they are calling you, of your desire to opt out from further direct company communications and solicitations, you are agreeing to continue to receive further emails and call solicitations [EASY DEALS] and its designated in house or third party call team(s).  </string>
    <string name="terms3"><b><i>Opt Out Procedure:</i></b> We provide 3 easy ways to opt out of from future solicitations.\n<b><i>1.</i></b> You may use the opt out link found in any email solicitation that you may receive.\n<b><i>2.</i></b> You may also choose to opt out, via sending your email address to: [opt-out email].\n<b><i>3.</i></b> You may send a written remove request to [Company Email Address].\n\n<b><i>Proprietary Rights.</i></b> [EASY DEALS] has proprietary rights and trade secrets in the Services. You may not copy, reproduce, resell or redistribute any Product manufactured and/or distributed by [EASY DEALS]. [EASY DEALS] also has rights to all trademarks and trade dress and specific layouts of this webpage, including calls to action, text placement, images and other information.\n\n<b>GST</b>- If you purchase any Services, you will be responsible for paying any applicable GST.</string>
    <string name="terms4"><i>Content, Intellectual Property, Third Party Links.</i> In addition to making Services available, this APPLICATION also offers information and marketing materials. This APPLICATION also offers information, both directly and through indirect links to third-party APPLICATIONS. [EASY DEALS] does not always create the information offered on this APPLICATION; instead the information is posted by users of this application. To the extent that [EASY DEALS] does create the content on this APPLICATION, such content is protected by intellectual property laws of the India, foreign nations, and international bodies. Unauthorized use of the material may violate copyright, trademark, and/or other laws. Any links to third-party APPLICATIONs are provided solely as a convenience to you. [EASY DEALS] can endorse the contents on any such third-party APPLICATIONs. [EASY DEALS]  is not responsible for the content of or any damage that may result from your access to or reliance on these third-party APPLICATIONs. If you link to third-party APPLICATIONs, you do so at your own risk.\n\n\n<b>Use of APPLICATION:</b> [EASY DEALS] is not responsible for any damages resulting from use of this APPLICATION by anyone. You will not use the APPLICATION for illegal purposes. You will \n\n<b>(1)</b> Abide by all applicable local, state, national, and international laws and regulations in your use of the APPLICATION (including laws regarding intellectual property),\n<b>(2)</b> Not interfere with or disrupt the use and enjoyment of the APPLICATION by other users,\n<b>(3)</b> Not resell material on the APPLICATION,\n<b>(4)</b> Not engage, directly or indirectly, in transmission of "spam", chain letters, junk mail or any other type of unsolicited communication, and\n<b>(5)</b> Not defame, harass, abuse, or disrupt other users of the APPLICATION\n<b>(6)</b> You give application(us) permission to share your posts and data saved/posted by you on this application.\n\n<b><i>License.</i></b> By using this APPLICATION, you are granted a limited, non-exclusive, non-transferable right to use the content and materials on the APPLICATION in connection with your normal, noncommercial, use of the APPLICATION. You may not copy, reproduce, transmit, distribute, or create derivative works of such content or information without express written authorization from [EASY DEALS] or the applicable third party (if third party content is at issue).\n\n<b><i>Posting.</i></b> By posting, storing, or transmitting any content on the APPLICATION, you hereby grant [EASY DEALS] a perpetual, worldwide, non-exclusive, royalty-free, assignable, right and license to use, copy, display, perform, create derivative works from, distribute, have distributed, transmit and assign such content in any form, in all media now known or hereinafter created, anywhere in the world. [EASY DEALS] does not have the ability to control the nature of the user-generated content offered through the APPLICATION. You are solely responsible for your interactions with other users of the APPLICATION and any content you post. [EASY DEALS] is not liable for any damage or harm resulting from any posts by or interactions between users. [EASY DEALS] reserves the right, but has no obligation, to monitor interactions between and among users of the APPLICATION and to remove any content [EASY DEALS]  deems objectionable, in MuscleUP Nutrition sole discretion.</string>
    <string name="terms5">YOUR USE OF THIS APPLICATION AND/OR SERVICES ARE AT YOUR SOLE RISK. THE APPLICATION AND SERVICES ARE OFFERED ON AN "AS IS" AND "AS AVAILABLE" BASIS. [EASY DEALS] EXPRESSLY DISCLAIMS ALL WARRANTIES OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT WITH RESPECT TO THE SERVICES OR APPLICATION CONTENT, OR ANY RELIANCE UPON OR USE OF THE APPLICATION CONTENT OR SERVICES. ("SERVICES" INCLUDE TRIAL SERVICES.)\n\n\nWITHOUT LIMITING THE GENERALITY OF THE FOREGOING, [EASY DEALS]  MAKES NO WARRANTY:\n\nTHAT THE INFORMATION PROVIDED ON THIS APPLICATION IS ACCURATE, RELIABLE, COMPLETE, OR TIMELY.\n\nTHAT THE LINKS TO THIRD-PARTY APPLICATIONS ARE TO INFORMATION THAT IS ACCURATE, RELIABLE, COMPLETE, OR TIMELY.\n\nNO ADVICE OR INFORMATION, WHETHER ORAL OR WRITTEN, OBTAINED BY YOU FROM THIS APPLICATION WILL CREATE ANY WARRANTY NOT EXPRESSLY STATED HEREIN.\n\nAS TO THE RESULTS THAT MAY BE OBTAINED FROM THE USE OF THE SERVICES OR THAT DEFECTS IN SERVICES WILL BE CORRECTED.\n\nREGARDING ANY SERVICES PURCHASED OR OBTAINED THROUGH THE APPLICATION.\n\nSOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF CERTAIN WARRANTIES, SO SOME OF THE ABOVE EXCLUSIONS MAY NOT APPLY TO YOU.</string>
    <string name="terms6">[EASY DEALS] ENTIRE LIABILITY, AND YOUR EXCLUSIVE REMEDY, IN LAW, IN EQUITY, OR OTHWERWISE, WITH RESPECT TO THE APPLICATION CONTENT AND SERVICES AND/OR FOR ANY BREACH OF THIS AGREEMENT IS SOLELY LIMITED TO THE AMOUNT YOU PAID, FOR SERVICES PURCHASED.\n\n\n[EASY DEALS] WILL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL OR CONSEQUENTIAL DAMAGES IN CONNECTION WITH THIS AGREEMENT OR THE SERVICES IN ANY MANNER, INCLUDING LIABILITIES RESULTING FROM\n\n<b>(1)</b> THE USE OR THE INABILITY TO USE THE APPLICATION CONTENT OR SERVICES;\n<b>(2)</b> THE COST OF PROCURING SUBSTITUTE SERVICES OR CONTENT;\n<b>(3)</b> ANY SERVICES PURCHASED OR OBTAINED OR TRANSACTIONS ENTERED INTO THROUGH THE APPLICATION; OR \n<b>(4)</b> ANY LOST PROFITS YOU ALLEGE.\n\n\nSOME JURISDICTIONS DO NOT ALLOW THE LIMITATION OR EXCLUSION OF LIABILITY FOR INCIDENTAL OR CONSEQUENTIAL DAMAGES SO SOME OF THE ABOVE LIMITATIONS MAY NOT APPLY TO YOU.</string>
    <string name="terms7">You will release, indemnify, defend and hold harmless [EASY DEALS], and any of its contractors, agents, employees, officers, directors, shareholders, affiliates and assigns from all liabilities, claims, damages, costs and expenses, including reasonable attorneys\' fees and expenses, of third parties relating to or arising out of\n<b>(1)</b> this Agreement or the breach of your warranties, representations and obligations under this Agreement; \n<b>(2)</b> the APPLICATION content or your use of the APPLICATION content; \n<b>(3)</b> the Services or your use of the Services (including Trial Services); \n<b>(4)</b> any intellectual property or other proprietary right of any person or entity; \n<b>(5)</b> your violation of any provision of this Agreement; \n<b>(6)</b> any information or data you supplied to [EASY DEALS].\n\nWhen [EASY DEALS] is threatened with suit or sued by a third party, [EASY DEALS] may seek written assurances from you concerning your promise to indemnify [EASY DEALS]; your failure to provide such assurances may be considered by [EASY DEALS] to be a material breach of this Agreement. [EASY DEALS] will have the right to participate in any defense by you of a third-party claim related to your use of any of the APPLICATION content or Services, with counsel of [EASY DEALS] choice at its expense. [EASY DEALS] will reasonably cooperate in any defense by you of a third-party claim at your request and expense. You will have sole responsibility to defend [EASY DEALS] against any claim, but you must receive [EASY DEALS] prior written consent regarding any related settlement. The terms of this provision will survive any termination or cancellation of this Agreement or your use of the APPLICATION or Services.</string>
    <string name="terms8">By using this APPLICATION or ordering Services, you acknowledge that you have read and agree to be bound by this Agreement and all terms and conditions on this APPLICATION. </string>
    <string name="trial1">Please contact on</string>
    <string name="trial11">for Registeration.</string>
    <string name="trial2">Our Marketing Executive will come at your Place for verification.</string>
</resources>