<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trial1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8851144135"
        android:textSize="24sp"
        android:background="@null"
        android:textColor="@color/dullyellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial11"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/textView4">

        </TextView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trial2"
        android:textColor="@color/aluminum"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/textView3"
        android:layout_below="@+id/linearLayout" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_rights"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="8sp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="13dp"
        android:id="@+id/textView2" />


</RelativeLayout>